feat(categoria): implementando caso de uso de criação de categoria